<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="8dp"
        tools:ignore="UselessParent">
        <!-- Name Surname -->
        <android.support.v7.widget.CardView
            android:layout_marginBottom="4dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/s_profile_info__name_surname"/>

                <TextView
                    android:id="@+id/s_profile_info__name_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!-- Email -->
        <android.support.v7.widget.CardView
            android:layout_marginBottom="4dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/s_profile_info__email"/>

                <TextView
                    android:id="@+id/s_profile_info__email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!-- Login -->
        <android.support.v7.widget.CardView
            android:layout_marginBottom="4dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/s_profile_info__login"/>

                <TextView
                    android:id="@+id/s_profile_info__login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!-- Date of Registration -->
        <android.support.v7.widget.CardView
            android:layout_marginBottom="4dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/s_profile_info__reg_date"/>

                <TextView
                    android:id="@+id/s_profile_info__date_of_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>